--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 const content = btoa(reader.result);
                 const filename = file.name;
                 const repo = "Plugin-warp/Plugin-warp.github.io";
-                const path = `extension/${filename}`;
+                const path = `extensions/${filename}`;
                 const apiUrl = `https://api.github.com/repos/${repo}/contents/${path}`;
                 
                 try {
